--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "blur/elysium-slider",
     "description": "A flexible Slider for Shopware 6",
-    "version": "0.1.1",
+    "version": "0.1.5",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "shopware/core": "6.4.*"
+        "shopware/core": "^6.3.0"
     },
     "extra": {
         "shopware-plugin-class": "Blur\\BlurElysiumSlider\\BlurElysiumSlider",
