--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "blur/elysium-slider",
-    "description": "A flexible Slider for Shopware 6",
-    "version": "0.1.5",
+    "description": "A flexible, reusable and feature rich Slider for Shopware 6",
+    "version": "0.0.0-dev",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -19,8 +19,8 @@
             "en-GB": "Elysium Slider"
         },
         "description": {
-            "de-DE": "Ein flexibler Slider für die Shopware 6 Erlebniswelten",
-            "en-GB": "A flexible Slider for Shopware 6"
+            "de-DE": "Ein flexibler, wiederverwendbarer und umfangreicher Slider für die Shopware 6 Erlebniswelten",
+            "en-GB": "A flexible, reusable and feature rich Slider for Shopware 6"
         }
     },
     "autoload": {
