change composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "blur/elysium-slider",
+    "name": "blurcreative/elysium-slider",
     "description": "A flexible, reusable and feature rich Slider for Shopware 6",
     "version": "0.0.0-dev",
     "type": "shopware-platform-plugin",
