--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "blurcreative/elysium-slider",
     "description": "A flexible, reusable and feature rich Slider for Shopware 6",
-    "version": "0.0.0-dev",
+    "version": "1.2.0",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
