--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
     "name": "blurcreative/elysium-slider",
     "description": "A flexible, reusable and feature rich Slider for Shopware 6",
-    "version": "1.2.0",
+    "keywords": [
+        "Shopware",
+        "CMS",
+        "Slider"
+    ],
+    "version": "1.2.1",
     "type": "shopware-platform-plugin",
     "minimum-stability": "stable",
     "license": "MIT",
