chore: update changelog, add ci job to generate html changelog

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint:administration:fix": "eslint --ext .js,.ts,.vue --fix src/Resources/app/administration/src",
     "lint:storefront": "eslint --ext .js,.ts,.vue src/Resources/app/storefront/src",
     "lint:storefront:fix": "eslint --ext .js,.ts,.vue --fix src/Resources/app/storefront/src",
+    "md:changelog": "marked-it-cli changelog/ --output=changelog/.mdout --overwrite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Robert Bisovski",
@@ -18,5 +19,8 @@
     "eslint-plugin-n": "^16.5.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.19.2"
+  },
+  "dependencies": {
+    "marked-it-cli": "^2.4.5"
   }
 }
