--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ include:
   - local: '/.gitlab-ci/.build.yml'
 
 # List of stages for jobs, and their order of execution
-stages: 
+stages:
   - qa
   - release
 
@@ -65,4 +65,18 @@ bundle:
     name: BlurElysiumSlider
     paths:
       - BlurElysiumSlider/
+    when: on_success
+
+# Add qa job for plugin install routine
+changelog:
+  image: node:lts-alpine
+  stage: release
+  script:
+    - npm install
+    - npm run md:changelog
+    - ls -la && pwd
+  artifacts:
+    name: changelog
+    paths:
+      - "changelog/.mdout/*"
     when: on_success
