chore: set version 3.1.0, update changelog, remove admin node_modules

--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -8,9 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@shopware-ag/meteor-admin-sdk": "^5.0.2",
-    "vue": "^3.4.21"
-  }
+  "license": "ISC"
 }
