--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tsconfig-paths-webpack-plugin": "^4.1.0"
+  }
 }
