--- a/src/Resources/app/administration/tsconfig.json
+++ b/src/Resources/app/administration/tsconfig.json
@@ -7,7 +7,15 @@
     "baseUrl": "./",
     "paths": {
       "blurElysium/*": ["src/*"],
-    }
+    },
+    "lib": [
+      "ES2020",
+      "ES2021",
+      "ES2022",
+      "ES2023",
+      "DOM",
+    ],
+    // "strict": true
   },
   "include": [
     "./src/**/*", 
