--- a/.gitlab-ci/.build.yml
+++ b/.gitlab-ci/.build.yml
@@ -1,5 +1,5 @@
 .build: 
-  image: shopware/development:8.2-composer-2
+  image: shopware/development:8.2-node-20.10-composer-2
   services:
     - name: mariadb:10.11 # spawn maria db
       alias: database
