--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker run -d --name shopware -v ${{ github.workspace }}:/app shopware/development:8.2-node-20.10-composer-2
 
       - name: Create database
-        run: docker exec shopware mysql -uroot -papp -hdatabase -e 'CREATE database `app`'
+        run: docker exec database mysql -uroot -papp -e 'CREATE DATABASE `app`'
 
       - name: Set up Shopware project
         run: |
