--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,18 @@ jobs:
       - name: Set up Docker
         run: docker run -d --name shopware -v ${{ github.workspace }}:/app shopware/development:8.2-node-20.10-composer-2
 
-      - name: Create database
-        run: docker exec ${GITHUB_JOB_SERVICES_DATABASE_ID} mysql -uroot -papp -e "CREATE DATABASE app"
-        # run: docker ps -a && echo ${GITHUB_JOB_SERVICES_DATABASE_ID}
-        # run: docker exec database mysql -uroot -papp -e 'CREATE DATABASE `app`'
+      - name: Debug container
+        env: 
+          TEST: test
+        run: |
+          echo "Container ID: $GITHUB_JOB_SERVICES_DATABASE_ID"
+          echo "ENV: $TEST"
+
+
+      # - name: Create database
+      #   run: docker exec ${GITHUB_JOB_SERVICES_DATABASE_ID} mysql -uroot -papp -e "CREATE DATABASE app"
+      #   # run: docker ps -a && echo ${GITHUB_JOB_SERVICES_DATABASE_ID}
+      #   # run: docker exec database mysql -uroot -papp -e 'CREATE DATABASE `app`'
 
       - name: Set up Shopware project
         run: |
