--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Set up Shopware project
         run: |
+          docker exec shopware ls -la /app
           docker exec shopware composer create-project shopware/production:v6.6.10.1 /app
           docker exec shopware composer require --dev phpstan/phpstan
           docker exec shopware cp /app/.devops/phpstan.neon /app
