--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,16 +27,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        run: docker run -d --name shopware -v ${{ github.workspace }}:/app shopware/development:8.2-node-20.10-composer-2
-
-      # - name: Debug container
-      #   env: 
-      #     TEST: test
-      #     CONTAINER: $GITHUB_JOB_SERVICES_DATABASE_ID
-      #   run: |
-      #     echo "Container ID: $GITHUB_JOB_SERVICES_database_ID"
-      #     echo "ENV: $TEST, CONTAINER: $CONTAINER"
-      #     docker ps -a
+        run: docker run -d --name shopware -v ${{ github.workspace }}:/BlurElysiumSlider shopware/development:8.2-node-20.10-composer-2
 
       - name: Create database
         run: docker exec database mysql -uroot -papp -e "CREATE DATABASE app"
@@ -49,7 +40,8 @@ jobs:
           docker exec shopware cp /app/.devops/phpstan.neon /app
           docker exec shopware cp /app/.devops/.env.local /app
           docker exec shopware bin/console system:install --basic-setup -q -n
-          docker exec shopware cp -r /app/custom/static-plugins/. /app/custom/static-plugins/
+          docker exec shopware cp -r /BlurElysiumSlider /app/custom/static-plugins/.
+          docker exec shopware ls -la /app/custom/static-plugins/
           docker exec shopware composer require blurcreative/elysium-slider
 
   phpstan:
