--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
           docker exec shopware ls -la /app
           docker exec shopware composer create-project shopware/production:v6.6.10.1 /app
           docker exec shopware composer require --dev phpstan/phpstan
-          docker exec shopware cp /app/.devops/phpstan.neon /app
-          docker exec shopware cp /app/.devops/.env.local /app
+          docker exec shopware cp /BlurElysiumSlider/.devops/phpstan.neon /app
+          docker exec shopware cp /BlurElysiumSlider/.devops/.env.local /app
           docker exec shopware bin/console system:install --basic-setup -q -n
           docker exec shopware cp -r /BlurElysiumSlider /app/custom/static-plugins/.
           docker exec shopware ls -la /app/custom/static-plugins/
