--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Set up Shopware 
         run: |
           docker ps -a
+          docker network ls
           docker exec app ls -la /app
 
       # - name: Set up Shopware project
