--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,13 +71,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Bundle plugin
-        run: |
-          docker exec app bin/build-administration.sh
-          docker exec app bin/build-storefront.sh
-          docker exec app cd /app/custom/static-plugins/BlurElysiumSlider
-          docker exec app rm -rf .git .gitignore .github .devops
-          docker exec app cp -r /app/custom/static-plugins/BlurElysiumSlider /app
-          docker exec app ls -la /app
+        run: docker ps -a
+        # run: |
+        #   docker exec app bin/build-administration.sh
+        #   docker exec app bin/build-storefront.sh
+        #   docker exec app cd /app/custom/static-plugins/BlurElysiumSlider
+        #   docker exec app rm -rf .git .gitignore .github .devops
+        #   docker exec app cp -r /app/custom/static-plugins/BlurElysiumSlider /app
+        #   docker exec app ls -la /app
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
