--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
   #         docker exec shopware npm run lint:administration
 
   bundle:
-    needs: setup-environment
+    needs: setup-build
     runs-on: ubuntu-latest
     steps:
       - name: Bundle plugin
@@ -114,7 +114,7 @@ jobs:
           path: /app/BlurElysiumSlider
 
   changelog:
-    needs: setup-environment
+    needs: setup-build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
