--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: shopware-build
-          path: /app
+          path: ~/app
 
       - name: Test
         run: ls -la && pwd
