--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       app:
         image: shopware/development:8.2-node-20.10-composer-2
         volumes:
-          - /home/runner/work/app:/app
+          - /home/runner/app:/app
         options:
           --name app
     steps:
