--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
 
       - name: Debug app dir
         run: |
+          docker cp -r ~/app app:/app
           cd ~/app
           ls -la
           pwd
