--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
         uses: shopware/shopware-cli-action@v1
 
       - name: Validate plugin
-        run: echo "${{ github.workspace }}"
+        run: |
+          echo "${{ github.workspace }}"
+          ls -la
   # setup-build:
   #   runs-on: ubuntu-latest
   #   services:
