--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,23 @@ jobs:
         run: |
           echo "${{ github.workspace }}"
           shopware-cli extension validate ${{ github.workspace }}
+
+  build-zip:
+    runs-on: ubuntu-latest
+    needs: validate
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install shopware-cli
+        uses: shopware/shopware-cli-action@v1
+
+      - name: Build zip
+        run: | 
+          shopware-cli extension zip --disable-git --release ${{ github.workspace }}
+          ls -la ${{ github.workspace }}
+
+      - name: Upload zip
+        uses: actions/upload-artifact@v4
+        with:
+          path: BlurElysiumSlider.zip
