--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Install shopware-cli
         uses: shopware/shopware-cli-action@v1
 
-      - name: Build zip
+      - name: Build extension
         run: | 
-          shopware-cli extension zip --disable-git ${{ github.workspace }}
+          shopware-cli extension build ${{ github.workspace }}
 
       - name: Upload zip
         uses: actions/upload-artifact@v4
         with:
           name: BlurElysiumSlider
-          path: BlurElysiumSlider.zip
+          path: /.
