--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           echo "${{ github.workspace }}"
           shopware-cli extension validate ${{ github.workspace }}
 
-  build-zip:
+  build-extension:
     runs-on: ubuntu-latest
     needs: validate
     steps:
@@ -37,8 +37,8 @@ jobs:
         run: | 
           shopware-cli extension build ${{ github.workspace }}
 
-      - name: Upload zip
+      - name: Upload as artifact
         uses: actions/upload-artifact@v4
         with:
           name: BlurElysiumSlider
-          path: /.
+          path: /
