--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,10 @@ jobs:
       - name: Build extension
         run: | 
           shopware-cli extension build ${{ github.workspace }}
+          rm -rf .devops
 
       - name: Upload as artifact
         uses: actions/upload-artifact@v4
         with:
           name: BlurElysiumSlider
-          path: /
+          path: ${{ github.workspace }}
